--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   change_app_package_name: ^1.4.0
+  fl_chart: ^0.70.2
   flutter:
     sdk: flutter
   flutter_intro: ^3.4.0
