--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   package_info_plus: ^8.2.0
   shared_preferences: ^2.5.1
   url_launcher: ^6.3.1
+  dotted_line: ^3.1.0
   
 
 dev_dependencies:
