--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   shared_preferences: ^2.5.1
   url_launcher: ^6.3.1
   dotted_line: ^3.1.0
-  
+  get:
+  responsive_builder: ^0.7.1
 
 dev_dependencies:
   flutter_test:
