--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,10 @@ environment:
 
 dependencies:
   change_app_package_name: ^1.4.0
+  http: ^1.1.0
   fl_chart: ^0.70.2
+  image: ^4.0.17
+  js: ^0.6.5
   flutter:
     sdk: flutter
   flutter_intro: ^3.4.0
@@ -20,6 +23,10 @@ dependencies:
   dotted_line: ^3.1.0
   get:
   responsive_builder: ^0.7.1
+  camera: ^0.11.1
+  google_ml_kit: ^0.19.0
+  google_mlkit_face_detection: ^0.12.0
+  
 
 dev_dependencies:
   flutter_test:
